--- a/templates/index.html
+++ b/templates/index.html
@@ -509,7 +509,7 @@
     <thead>
       <tr>
         <th>Pallet ID</th>
-        <th>Weight (lbs)</th>
+        <th>Total Pallet Weight (lbs)</th>
       </tr>
     </thead>
     <tbody>
