some reorganizing for my sanity

--- a/templates/tab_today.html
+++ b/templates/tab_today.html
@@ -31,12 +31,35 @@
 
     // Define the expected fields for user log
     const userLogFields = [
-      'id', 'date_entered', 'belt_eggs', 'floor_eggs', 'mortality_indoor', 'mortality_outdoor',
-      'euthanized_indoor', 'euthanized_outdoor', 'depop', 'amount_delivered', 'mortality_reasons',
-      'cull_reasons', 'mortality_comments', 'coolerlog_comments', 'added_supplements',
-      'birds_restricted_reason', 'comments', 'weather', 'air_sensory', 'ration',
-      'drinkers_clean', 'birds_under_slats', 'safe_indoors', 'safe_outdoors',
-      'equipment_functioning', 'predator_activity', 'eggs_picked_up', 'door_open', 'door_closed'
+      'id',
+      'date_entered',
+      'belt_eggs',
+      'floor_eggs',
+      'mortality_indoor',
+      'mortality_outdoor',
+      'euthanized_indoor',
+      'euthanized_outdoor',
+      'mortality_reasons',
+      'cull_reasons',
+      'mortality_comments',
+      'eggs_picked_up',
+      'coolerlog_comments',
+      'added_supplements',
+      'ration',
+      'amount_delivered',
+      'birds_restricted_reason',
+      'comments',
+      'weather',
+      'air_sensory',
+      'drinkers_clean',
+      'birds_under_slats',
+      'safe_indoors',
+      'safe_outdoors',
+      'equipment_functioning',
+      'predator_activity',
+      'depop',
+      'door_open',
+      'door_closed'
     ];
 
     // Define display names for fields
