--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <button class="tablinks active" onclick="openTab(event, 'todaydata')">Daily Farm Data Entry</button>
   <button class="tablinks" onclick="openTab(event, 'pallet')">Pallet Entry</button>
   <button class="tablinks" onclick="openTab(event, 'settings')">Farm Settings</button>
+  <button class="tablinks" onclick="openTab(event, 'advanced')">Advanced</button>
   <button class="tablinks" onclick="loadHistoryTab(event)">History</button>
 </div>
 
@@ -15,5 +16,6 @@
 {% include 'tab_today.html' %}
 {% include 'tab_pallet.html' %}
 {% include 'tab_settings.html' %}
+{% include 'tab_advanced.html' %}
 {% include 'tab_history.html' %}
 {% endblock %}
